fix: aligns sponsor buttons, current sponsors visible by default and parent elements reversed at sponsor section

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,6 +15,9 @@
     margin-left: 0;
     margin: 5vw;
   }
+  .sponsor-wrapper-in {
+    margin-top: 4vh;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -27,5 +30,8 @@
   .stats-card {
     width: 200px;
     height: 200px;
+  }
+  .sponsor-wrapper-in {
+    margin-top: 5vh;
   }
 }
